# Bambu

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: bambu-maker.md
.codex/: config.toml
.codex/agents/: bambu-maker.toml  bambu-reviewer.toml
.codex/environments/: environment.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  shared-ci.yml
.greptile/: files.json  rules.md
agents/: README.md  mcp.template.json
agents/prompts/: intake-from-photo.md  maker.md  (+1 more)
bambu/: __init__.py  blender_v4.py  cad.py  cli.py  context.py  design_pipeline.py  figurine.py  handoff.py  intake.py  mcp_server.py  mesh.py  mesh_fusion.py  mesh_lane.py  meshy.py  pipeline.py  preflight.py  printability.py  projects.py  reference_validation.py  review3d.py  slicer.py
docs/: agent-ready.md
scripts/: bambu  check-runner.sh  check-status.sh  check.sh
tests/: test_agent_scaffolding.py  test_archetype_gates.py  test_blender_v4.py  test_cad.py  test_ci_gate_contract.py  test_cli.py  test_design_pipeline.py  test_export_body.py  test_figurine.py  test_handoff.py  test_hybrid_release.py  test_intake.py  test_mcp_tools.py  test_mesh_fusion.py  test_meshy.py  test_pipeline.py  test_pipeline_run.py  test_preflight.py  test_printability.py  test_projects.py  test_reference_validation.py  test_review3d.py  test_seated_diorama.py  test_slicer.py  test_world_cup_v2.py  test_world_cup_v4.py
tools/: freecad_probe.sh  freecad_review.py  render_v4_blender.py  review_3d.py
(+83 files in other folders)
