[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bambu-workbench"
version = "0.1.0"
description = "Agent-assisted 3D-print preparation for Bambu printers."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mike Edwards" }]
dependencies = [
  "build123d>=0.10.0",
  "manifold3d>=3.5.1",
  "mcp>=1.28.1",
  "networkx>=3.6.1",
  "numpy>=2.4.6",
  "pymeshlab>=2025.7.post1",
  "pyyaml>=6.0.3",
  "scipy>=1.17.1",
  "trimesh>=4.12.2",
]
keywords = ["3d-printing", "bambu", "openscad", "cad", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.optional-dependencies]
meshy = ["httpx>=0.27.0"]

[project.scripts]
bambu = "bambu.cli:main"
bambu-mcp = "bambu.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bambu*"]

[dependency-groups]
dev = ["ruff>=0.14.0"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["F", "I", "B"]
